fix: 优化了模型
