# server/models/system/sys_user.go
@@ -16,3 +16,18 @@ type User struct {
 	//关联到角色表
 	Roles []SysRole `json:"roles" gorm:"many2many:sys_user_role;"`
 }
+
+//LoginRequest 登陆请求参数
+type LoginRequest struct {
+	Username  string `json:"user_name" binding:"required"`
+	Password  string `json:"password" binding:"required"`
+	Captcha   string `json:"captcha" binding:"required"`
+	CaptchaId string `json:"captcha_id" binding:"required"`
+}
+
+// SysUserRequest 用户列表请求参数
+type SysUserRequest struct {
+	models.PaginationRequest
+	Username string `form:"username" json:"user_name"`
+	Nickname string `form:"nickname" json:"nick_name"`
+}
